# pygrits

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Activity.md  ActivityType.md  BboxLocator.md  BiologicalScope.md  Boolean.md  CharRangeLocator.md  CompatibilityJudgment.md  CompatibilityStatus.md  Composable.md  ComposedViewpointDirective.md  CompositeLocator.md  CompositionMode.md  CompositionalScope.md  Confidence.md  ConfidenceBasis.md  ContentReference.md  Curie.md  CurieOrUri.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  Entity.md  EntityId.md  EpistemicStatus.md  EvidenceDensity.md  EvidenceRecord.md  EvidenceTypeBase.md  ExtendedProfile.md  ExtractionGranularity.md  ExtractionProfile.md  FileRegionLocator.md  Float.md  Full.md  Grit.md  GritId.md  HashMode.md  Integer.md  Iso8601.md  (+187 more)
examples/: 01_viewpoint_meta.yaml  02_viewpoint_alkali_halide.yaml  02_viewpoint_blank_slate.yaml  03_object_minimal.yaml  03_paper_licl.yaml  04_evidence_licl_span.yaml  04_evidence_minimal.yaml  05_synthesis_activity.yaml  05_synthesis_activity_minimal.yaml  06_claim_licl_mp.yaml  06_claim_minimal.yaml
guide/: README.md  activity.md  composition.md  evidence_record.md  extraction_profile.md  object.md  reasoning_policy.md  viewpoint_directive.md  vocabulary_pack.md
scripts/: regenerate.sh
src/pygrits/: __init__.py  canonical.py  core.py  core.schema.json  core.yaml  resources.py  viewpoint_resolution.py
src/pygrits/viewpoints/: __init__.py  blank_slate_v0.py  blank_slate_v0.schema.json  coordination_v0.py  coordination_v0.schema.json  coordination_v0.yaml  document_extraction_v0.py  document_extraction_v0.schema.json  document_extraction_v0.yaml  materials_science_v0.py  materials_science_v0.schema.json  paper_parsing_v0.py  paper_parsing_v0.schema.json  paper_parsing_v0.yaml
tests/: test_canonical_roundtrip.py  test_core_no_domain_vocab.py  test_evidence_type_open.py  test_examples_validate.py  test_negative_cases.py  test_no_isom_references.py  test_no_social_slots_in_core.py  test_semantic_web_slots.py  test_viewpoint_resolution.py  test_viewpoints.py  validate_bundle.py
viewpoints/: blank_slate_v0.yaml  document_extraction_v0.yaml  materials_science_v0.yaml
viewpoints/materials_science_v0/examples/: 01_viewpoint_alkali_halide.yaml  02_paper_licl.yaml  03_evidence_licl_span.yaml  04_synthesis_activity.yaml  05_claim_licl_mp.yaml
viewpoints/paper_parsing_v0/examples/: 01_generic_paper_parse_view.yaml  02_detailed_extraction_profile.yaml  03_materials_vocabulary_pack.yaml  04_conservative_reasoning_policy.yaml
