[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pygrits"
version = "0.4.0"
description = "Raisins in the pudding: pygrits core schema with viewpoint-extension scaffolding for evidence-grounded scientific grits."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Petrus H. Zwart" },
]
keywords = [
    "scientific-reasoning",
    "epistemic-discipline",
    "provenance",
    "linkml",
    "agentic-systems",
    "pygrits",
    "grits",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pydantic>=2.5",
    "jcs>=0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
schema = [
    # Tools needed to regenerate the Pydantic / JSON Schema / docs from the LinkML source.
    # Not required to USE pygrits (the generated artifacts are shipped with the package).
    "linkml>=1.11",
]
test = [
    "pytest>=7",
    "pytest-cov",
]
dev = [
    "pygrits[schema,test]",
    "ruff",
]

[project.urls]
# Update once the GitHub repo exists:
# Homepage = "https://github.com/<user>/pygrits"
# Issues = "https://github.com/<user>/pygrits/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pygrits"]

[tool.hatch.build.targets.wheel.force-include]
"src/pygrits/core.yaml" = "pygrits/core.yaml"
"src/pygrits/core.schema.json" = "pygrits/core.schema.json"
"src/pygrits/viewpoints/blank_slate_v0.yaml" = "pygrits/viewpoints/blank_slate_v0.yaml"
"src/pygrits/viewpoints/blank_slate_v0.schema.json" = "pygrits/viewpoints/blank_slate_v0.schema.json"
"src/pygrits/viewpoints/document_extraction_v0.yaml" = "pygrits/viewpoints/document_extraction_v0.yaml"
"src/pygrits/viewpoints/document_extraction_v0.schema.json" = "pygrits/viewpoints/document_extraction_v0.schema.json"
"src/pygrits/viewpoints/materials_science_v0.yaml" = "pygrits/viewpoints/materials_science_v0.yaml"
"src/pygrits/viewpoints/materials_science_v0.schema.json" = "pygrits/viewpoints/materials_science_v0.schema.json"
"src/pygrits/viewpoints/coordination_v0.yaml" = "pygrits/viewpoints/coordination_v0.yaml"
"src/pygrits/viewpoints/coordination_v0.schema.json" = "pygrits/viewpoints/coordination_v0.schema.json"
"src/pygrits/viewpoints/paper_parsing_v0.yaml" = "pygrits/viewpoints/paper_parsing_v0.yaml"
"src/pygrits/viewpoints/paper_parsing_v0.schema.json" = "pygrits/viewpoints/paper_parsing_v0.schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "src/pygrits/core.py",
    "src/pygrits/viewpoints/*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter
